# vadon

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
application/: CMakeLists.txt
application/VadonApp/: CMakeLists.txt  VadonApp.hpp
application/VadonApp/Core/: Application.cpp  Application.hpp  CMakeLists.txt  Configuration.hpp  System.cpp  System.hpp  SystemModule.hpp  SystemRegistry.hpp
application/VadonApp/Platform/: CMakeLists.txt  Configuration.hpp  Module.hpp  PlatformInterface.hpp  PlatformModule.hpp
application/VadonApp/Platform/Event/: CMakeLists.txt  Event.hpp
application/VadonApp/Platform/Input/: CMakeLists.txt  Input.hpp  InputSystem.hpp  Keyboard.hpp  Mouse.hpp
application/VadonApp/Platform/Window/: CMakeLists.txt  Window.hpp
application/VadonApp/Private/: CMakeLists.txt
application/VadonApp/Private/Core/: Application.cpp  Application.hpp  CMakeLists.txt
application/VadonApp/Private/PCH/: CMakeLists.txt  VadonApp.hpp
application/VadonApp/Private/Platform/: CMakeLists.txt  PlatformInterface.cpp  PlatformInterface.hpp
application/VadonApp/Private/UI/: CMakeLists.txt  Console.cpp  Console.hpp  UISystem.cpp  UISystem.hpp
application/VadonApp/UI/: CMakeLists.txt  Configuration.hpp  Console.cpp  Console.hpp  Module.hpp  UIModule.hpp  UISystem.hpp
application/VadonApp/UI/Developer/: CMakeLists.txt  Configuration.hpp  GUI.hpp  GUIElements.hpp  IconsFontAwesome5.h
application/VadonApp/Utilities/Event/: CMakeLists.txt  Event.hpp
demo/: CMakeLists.txt
demo/VadonDemo/: CMakeLists.txt
demo/VadonDemo/Core/: CMakeLists.txt  GameCore.cpp
demo/VadonDemo/Platform/: PlatformInterface.hpp
demo/VadonDemo/Render/: CMakeLists.txt  RenderSystem.cpp  RenderSystem.hpp
demo/VadonDemo/UI/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
demo/common/: CMakeLists.txt
demo/common/VadonDemo/: CMakeLists.txt  VadonDemoCommon.hpp
demo/common/VadonDemo/Core/: CMakeLists.txt  Component.cpp  Component.hpp  Configuration.cpp  Configuration.hpp  Core.cpp  Core.hpp
demo/common/VadonDemo/Model/: CMakeLists.txt  Component.cpp  Component.hpp  Model.cpp  Model.hpp  Node.cpp  Node.hpp  Resource.cpp  Resource.hpp
demo/common/VadonDemo/Render/: CMakeLists.txt  Component.cpp  Component.hpp  Render.cpp  Render.hpp  Resource.cpp  Resource.hpp
demo/common/VadonDemo/UI/: CMakeLists.txt  Component.cpp  Component.hpp  DefaultFont.inl  UI.cpp  UI.hpp
demo/common/VadonDemo/View/: CMakeLists.txt  Component.cpp  Component.hpp  Resource.cpp  Resource.hpp  View.cpp  View.hpp
demo/editor/: CMakeLists.txt
demo/editor/VadonDemo/: CMakeLists.txt  main.cpp
demo/editor/VadonDemo/Core/: CMakeLists.txt  Editor.cpp  Editor.hpp
demo/editor/VadonDemo/Platform/: CMakeLists.txt  EditorPlatform.cpp  EditorPlatform.hpp
demo/editor/VadonDemo/Render/: CMakeLists.txt  EditorRender.cpp  EditorRender.hpp
demo/editor/VadonDemo/UI/: CMakeLists.txt  EditorUI.cpp  EditorUI.hpp
demo/editor/VadonDemo/View/: CMakeLists.txt  EditorView.cpp  EditorView.hpp
demo/game/: CMakeLists.txt
demo/game/VadonDemo/: CMakeLists.txt  main.cpp
demo/game/VadonDemo/Core/: GameCore.cpp  GameCore.hpp
demo/game/VadonDemo/Model/: CMakeLists.txt  GameModel.cpp  GameModel.hpp
demo/game/VadonDemo/Platform/: CMakeLists.txt  PlatformInterface.cpp  PlatformInterface.hpp
demo/game/VadonDemo/Render/: CMakeLists.txt  CopyShader.hlsl  RenderSystem.cpp  RenderSystem.hpp
demo/game/VadonDemo/UI/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  UISystem.cpp  UISystem.hpp
demo/game/VadonDemo/View/: CMakeLists.txt  GameView.cpp  GameView.hpp
demo/project/: basic_enemy.vdsc  basic_projectile.vdsc  main.vdsc  map.vdsc  moon.vdsc  orb.vdsc  planet.vdsc  player.vdsc  project.vdpr  star.vdsc
demo/project/assets/: grass_texture_repeating.DDS  grass_texture_repeating.DDS.vdimport
demo/project/resources/: global_config.vdrc
demo/project/scenes/: core.vdsc  game_ui.vdsc  main.vdsc  main_menu.vdsc
editor/: CMakeLists.txt
editor/VadonEditor/: CMakeLists.txt  VadonEditor.hpp
editor/VadonEditor/Core/: CMakeLists.txt  Editor.cpp  Editor.hpp  Module.hpp
editor/VadonEditor/Core/Project/: CMakeLists.txt  Project.hpp  ProjectManager.cpp  ProjectManager.hpp
editor/VadonEditor/Core/System/: CMakeLists.txt  Module.hpp  Registry.hpp  System.cpp  System.hpp
editor/VadonEditor/Model/: CMakeLists.txt  ModelSystem.cpp  ModelSystem.hpp  Module.hpp
editor/VadonEditor/Model/Resource/: CMakeLists.txt  Resource.cpp  Resource.hpp  ResourceSystem.cpp  ResourceSystem.hpp
editor/VadonEditor/Model/Scene/: CMakeLists.txt  Component.hpp  Entity.cpp  Entity.hpp  Event.hpp  Scene.cpp  Scene.hpp  SceneSystem.cpp  SceneSystem.hpp  SceneTree.cpp  SceneTree.hpp
editor/VadonEditor/Platform/: CMakeLists.txt  Event.hpp  Module.hpp  PlatformInterface.cpp  PlatformInterface.hpp
editor/VadonEditor/Render/: CMakeLists.txt  Module.hpp  RenderSystem.cpp  RenderSystem.hpp
editor/VadonEditor/UI/: CMakeLists.txt  Module.hpp  UISystem.cpp  UISystem.hpp
editor/VadonEditor/UI/Developer/: CMakeLists.txt  GUI.hpp  Widgets.hpp
editor/VadonEditor/View/: CMakeLists.txt  Module.hpp  ViewSystem.cpp  ViewSystem.hpp
editor/VadonEditor/View/Main/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
editor/VadonEditor/View/Project/: AssetBrowser.cpp  AssetBrowser.hpp  CMakeLists.txt  Project.cpp  Project.hpp
editor/VadonEditor/View/Scene/: CMakeLists.txt  SceneTree.cpp  SceneTree.hpp
editor/VadonEditor/View/Widgets/: CMakeLists.txt  Property.cpp  Property.hpp
engine/: CMakeLists.txt
engine/common/: CMakeLists.txt
engine/common/Vadon/: CMakeLists.txt  Common.hpp
engine/core/: CMakeLists.txt
engine/core/Vadon/: CMakeLists.txt  Core.hpp
engine/graphics_api/: CMakeLists.txt
engine/graphics_api/Vadon/: CMakeLists.txt  GraphicsAPI.hpp
engine/render/: CMakeLists.txt
engine/render/Vadon/: CMakeLists.txt  Render.hpp
tools/: CMakeLists.txt
tools/editor/: CMakeLists.txt
tools/editor/application/: CMakeLists.txt
tools/editor/common/: CMakeLists.txt
tools/shader_compiler/: CMakeLists.txt  main.cpp
(+561 files in other folders)
